syntax = "proto3";

package proto;

option go_package = "api/proton";

service DataService {
  rpc GetUserDataList(GetUserDataListRequest) returns (GetUserDataListResponse);
  rpc GetData(GetDataRequest) returns (GetDataResponse);
  rpc SaveData(SaveDataRequest) returns (SaveDataResponse);
  rpc DeleteData(DeleteDataRequest) returns (DeleteDataResponse);
}

message GetUserDataListRequest {}

message GetUserDataListResponse {
  repeated UserDataItem items = 1;
}

message UserDataItem {
  string id = 1;
  string name = 2;
  string type = 3;
}

message GetDataRequest {
  string id = 1;
}

message GetDataResponse {
  string type = 1;
  oneof content {
    string text_data = 2;
    bytes file_data = 3;
  }
}

message SaveDataRequest {
  string user_uid = 1;
  string type = 2;
  string name = 3;
  bytes data = 4;
}

message SaveDataResponse {}

message DeleteDataRequest {
  string id = 1;
}

message DeleteDataResponse {}